# fastapi-app

./: .gitignore  add_user.py  db.sqlite3  main.py  pyproject.toml  requirements.txt
api/endpoints/: auth.py  menus.py  user.py
core/: jwt.py
db/: models.py
schemas/: user.py
utils/: captcha.py
